results/classifier/111/review/1888431
vnc: 0.118
PID: 0.108
other: 0.087
device: 0.078
files: 0.078
semantic: 0.078
socket: 0.067
boot: 0.062
KVM: 0.062
graphic: 0.061
permissions: 0.056
performance: 0.050
network: 0.048
debug: 0.047
debug: 0.140
files: 0.139
PID: 0.130
other: 0.096
network: 0.090
socket: 0.075
vnc: 0.074
device: 0.064
KVM: 0.046
semantic: 0.044
performance: 0.034
graphic: 0.024
boot: 0.024
permissions: 0.020

v5.1.0-rc1 build fails on Mac OS X 10.11.6 

Hi all, 

build of tag v5.1.0-rc1 fails on Mac OS X 10.11.6 (El Capitan) with the following error:

git clone https://git.qemu.org/git/qemu.git
    <output elided, but all OK>
cd qemu
git submodule init
    <output elided, but all OK>
git submodule update --recursive
    <output elided, but all OK>
./configure
    <output elided, but all OK>
make
    <output elided, but all OK up until fail>

  CC      trace/control.o
In file included from trace/control.c:29:
In file included from /Users/rtb/src/qemu/include/monitor/monitor.h:4:
In file included from /Users/rtb/src/qemu/include/block/block.h:4:
In file included from /Users/rtb/src/qemu/include/block/aio.h:23:
/Users/rtb/src/qemu/include/qemu/timer.h:843:9: warning: implicit declaration of function 'clock_gettime' is invalid in C99
      [-Wimplicit-function-declaration]
        clock_gettime(CLOCK_MONOTONIC, &ts);
        ^
/Users/rtb/src/qemu/include/qemu/timer.h:843:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ts);
                      ^
1 warning and 1 error generated.
make: *** [trace/control.o] Error 1


rtb:qemu rtb$ git log -n1
commit c8004fe6bbfc0d9c2e7b942c418a85efb3ac4b00 (HEAD -> master, tag: v5.1.0-rc1, origin/master, origin/HEAD)
Author: Peter Maydell <email address hidden>
Date:   Tue Jul 21 20:28:59 2020 +0100

    Update version for v5.1.0-rc1 release
    
    Signed-off-by: Peter Maydell <email address hidden>
rtb:qemu rtb$ 


Please find the full output of all the commands (from git clone of the repo, to the make) in the attached file "buildfail.txt".

Thank you!

Best regards, 

Robert Ball



I'm sorry, but the QEMU project only supports the two most recent versions of macOS (see https://www.qemu.org/docs/master/system/build-platforms.html#macos ), i.e. everything that is older than macOS 10.14 is not supported anymore.

OK, thank you for pointing that out.

Question, can you help me identify the most recent release/tag/commit that I could back up to which would support Mac OS X 10.11.6?

Thank you!

Best regards, 

Robert Ball


Hmm, let's see ... the work-arounds for old Mac OS X versions have been removed here:

https://git.qemu.org/?p=qemu.git;a=commitdiff;h=483644c25b932360018

It mentiones that this commit has broken compilation earlier:

https://git.qemu.org/?p=qemu.git;a=commitdiff;h=50290c002c045280f8d

... so the newest version that still might be compilable is v4.0.

Fantastic.   Thank you Thomas, greatly appreciated!

Best regards, 

Robert Ball


